--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "init": "yarn",
     "start": "cd ./packages/server/ && yarn run start",
     "storybook": "start-storybook -p 9001",
-    "watch": "webpack-dev-server --config ./packages/server/webpack.config.dev.js --colors --display-error-details",
+    "watch": "webpack-dashboard -- webpack-dev-server --config ./packages/server/webpack.config.dev.js --colors --display-error-details",
     "build": "webpack --config ./packages/server/webpack.config.prod.js --output-path=`pwd`",
     "rebuild-grpc": "docker exec -it bufferdev_publish_1 bash -c 'npm rebuild grpc --target_arch=x64 --target_platform=linux --target_libc=glibc'"
   },
@@ -105,6 +105,7 @@
     "webpack": "4.16.2",
     "webpack-bundle-analyzer": "^2.13.1",
     "webpack-cli": "3.1.0",
+    "webpack-dashboard": "^2.0.0",
     "webpack-dev-middleware": "3.1.3",
     "webpack-dev-server": "3.1.5",
     "webpack-hot-middleware": "2.22.3",
@@ -112,7 +113,7 @@
   },
   "jest": {
     "transformIgnorePatterns": [
-      "/node_modules(?!/@bufferapp/performance-tracking)(?!/@bufferapp/notifications)(?!/@bufferapp/analyze-date-picker)(?!/@bufferapp/summary-table)(?!/@bufferapp/add-report)(?!/@bufferapp/analyze-png-export)(?!/@bufferapp/analyze-csv-export)(?!/@bufferapp/analyze-decorators)(?!/@bufferapp/analyze-profile-selector)(?!/@bufferapp/analyze-shared-components)(?!/@bufferapp/report-list)(?!/@bufferapp/async-data-fetch)(?!/@bufferapp/components)(?!/@bufferapp/web-components)(?!/@bufferapp/composer)(?!\/@bufferapp\/unauthorized-redirect)/"
+      "/node_modules(?!/@bufferapp/performance-tracking)(?!/@bufferapp/notifications)(?!/@bufferapp/analyze-date-picker)(?!/@bufferapp/summary-table)(?!/@bufferapp/add-report)(?!/@bufferapp/analyze-png-export)(?!/@bufferapp/analyze-csv-export)(?!/@bufferapp/analyze-decorators)(?!/@bufferapp/analyze-profile-selector)(?!/@bufferapp/analyze-shared-components)(?!/@bufferapp/report-list)(?!/@bufferapp/async-data-fetch)(?!/@bufferapp/components)(?!/@bufferapp/web-components)(?!/@bufferapp/composer)(?!/@bufferapp/unauthorized-redirect)/"
     ],
     "verbose": true,
     "collectCoverage": true,
