--- a/.babelrc
+++ b/.babelrc
@@ -5,6 +5,9 @@
   ],
   "plugins": [
     "react-hot-loader/babel",
+    ["transform-react-remove-prop-types", {
+      "ignoreFilenames": ["node_modules"]
+    }],
     "transform-export-extensions",
     "transform-object-rest-spread",
     "transform-class-properties",
