--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,7 @@
     "no-underscore-dangle": 0,
     "space-before-function-paren": 0,
     "import/no-extraneous-dependencies": 0,
-    "jsx-a11y/href-no-hash": [0]
+    "jsx-a11y/href-no-hash": [0],
+    "react/forbid-foreign-prop-types": 1
   }
 }
