--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -32,7 +32,8 @@
     "serialize-javascript": "^1.5.0"
   },
   "devDependencies": {
-    "eslint": "3.19.0"
+    "eslint": "3.19.0",
+    "moment-locales-webpack-plugin": "^1.0.7"
   },
   "publishConfig": {
     "access": "public"
